# sigma

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.cpp
include/sigma/: algo.hpp  bs.hpp  instruments.hpp  smath.hpp  utils.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  bs_test.cpp
